--- a/index.html
+++ b/index.html
@@ -28,5 +28,19 @@
             </ul>
         </div>
     </div>
+
+    <!-- Showcase -->
+    <header id="showcase">
+        <div class="container">
+            <div class="showcase-container">
+                <div class="showcase-content">
+                    <div class="category category-sports">Sports</div>
+                    <h1>Some Sports Article</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dicta sunt nemo, obcaecati dolore veritatis laborum id illo libero placeat suscipit ut at iste quaerat quis dolorem temporibus eligendi mollitia.</p>
+                    <a href="article.html" class="btn btn-primary">Read More</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
