--- a/index.html
+++ b/index.html
@@ -1,113 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width: 768px)"
+      href="css/mobile.css"
+    />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>NewsGrid | Latest News</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="main-nav">
-        <div class="container">
-            <img src="img/logo.png" alt="News Grid" class="logo">
-            <div class="social">
-                <a href="http://facebook.com" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="http://twitter.com" target="_blank"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="http://instagram.com" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="http://youtube.com" target="_blank"><i class="fab fa-youtube fa-2x"></i></a> 
-            </div>
-            <ul>
-                <li><a href="index.html" class="current">Home</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+      <div class="container">
+        <img src="img/logo.png" alt="News Grid" class="logo" />
+        <div class="social">
+          <a href="http://facebook.com" target="_blank"
+            ><i class="fab fa-facebook fa-2x"></i
+          ></a>
+          <a href="http://twitter.com" target="_blank"
+            ><i class="fab fa-twitter fa-2x"></i
+          ></a>
+          <a href="http://instagram.com" target="_blank"
+            ><i class="fab fa-instagram fa-2x"></i
+          ></a>
+          <a href="http://youtube.com" target="_blank"
+            ><i class="fab fa-youtube fa-2x"></i
+          ></a>
         </div>
+        <ul>
+          <li><a href="index.html" class="current">Home</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
     </div>
 
     <!-- Showcase -->
     <header id="showcase">
-        <div class="container">
-            <div class="showcase-container">
-                <div class="showcase-content">
-                    <div class="category category-sports">Sports</div>
-                    <h1>Some Sports Article</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil dicta sunt nemo, obcaecati dolore veritatis laborum id illo libero placeat suscipit ut at iste quaerat quis dolorem temporibus eligendi mollitia.</p>
-                    <a href="article.html" class="btn btn-primary">Read More</a>
-                </div>
-            </div>
+      <div class="container">
+        <div class="showcase-container">
+          <div class="showcase-content">
+            <div class="category category-sports">Sports</div>
+            <h1>Some Sports Article</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+              dicta sunt nemo, obcaecati dolore veritatis laborum id illo libero
+              placeat suscipit ut at iste quaerat quis dolorem temporibus
+              eligendi mollitia.
+            </p>
+            <a href="article.html" class="btn btn-primary">Read More</a>
+          </div>
         </div>
+      </div>
     </header>
 
     <!-- Home Articles -->
     <section id="home-articles" class="py-2">
-        <div class="container">
-            <h2>Editors Picks</h2>
-            <div class="articles-container">
-                <article class="card">
-                    <img src="img/articles/ent1.jpg" alt="">
-                    <div>
-                        <div class="category category-ent">Entertainment</div>
-                        <h3>
-                            <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                        </h3>
-                    </div>
-                </article>
-                <article class="card bg-dark">
-                    <div class="category category-sports">Sports</div>
-                    <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                </article>
-                <article class="card">
-                    <img src="img/articles/tech1.jpg" alt="">
-                    <div class="category category-tech">Technology</div>
-                    <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                </article>
-                <article class="card">
-                    <div class="category category-tech">Sports</div>
-                    <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                    <img src="img/articles/sports1.jpg" alt="">
-                </article>
-                <article class="card">
-                    <img src="img/articles/tech2.jpg" alt="">
-                    <div class="category category-tech">Technology</div>
-                    <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                </article>
-                <article class="card bg-primary">
-                    <div class="category category-sports">Sports</div>
-                    <h3>
-                        <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                    </h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                </article>
-                <article class="card">
-                    <div>
-                        <div class="category category-ent">Entertainment</div>
-                        <h3>
-                            <a href="article.html">Lorem ipsum dolor sit amet.</a>
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus quos laudantium unde exercitationem culpa maiores cum repellendus suscipit iure architecto!</p>
-                        </h3>
-                    </div>
-                    <img src="img/articles/ent2.jpg" alt="">
-                </article>
+      <div class="container">
+        <h2>Editors Picks</h2>
+        <div class="articles-container">
+          <article class="card">
+            <img src="img/articles/ent1.jpg" alt="" />
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Natus quos laudantium unde exercitationem culpa maiores cum
+                  repellendus suscipit iure architecto!
+                </p>
+              </h3>
             </div>
+          </article>
+          <article class="card bg-dark">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              quos laudantium unde exercitationem culpa maiores cum repellendus
+              suscipit iure architecto!
+            </p>
+          </article>
+          <article class="card">
+            <img src="img/articles/tech1.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              quos laudantium unde exercitationem culpa maiores cum repellendus
+              suscipit iure architecto!
+            </p>
+          </article>
+          <article class="card">
+            <div class="category category-tech">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              quos laudantium unde exercitationem culpa maiores cum repellendus
+              suscipit iure architecto!
+            </p>
+            <img src="img/articles/sports1.jpg" alt="" />
+          </article>
+          <article class="card">
+            <img src="img/articles/tech2.jpg" alt="" />
+            <div class="category category-tech">Technology</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              quos laudantium unde exercitationem culpa maiores cum repellendus
+              suscipit iure architecto!
+            </p>
+          </article>
+          <article class="card bg-primary">
+            <div class="category category-sports">Sports</div>
+            <h3>
+              <a href="article.html">Lorem ipsum dolor sit amet.</a>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+              quos laudantium unde exercitationem culpa maiores cum repellendus
+              suscipit iure architecto!
+            </p>
+          </article>
+          <article class="card">
+            <div>
+              <div class="category category-ent">Entertainment</div>
+              <h3>
+                <a href="article.html">Lorem ipsum dolor sit amet.</a>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Natus quos laudantium unde exercitationem culpa maiores cum
+                  repellendus suscipit iure architecto!
+                </p>
+              </h3>
+            </div>
+            <img src="img/articles/ent2.jpg" alt="" />
+          </article>
         </div>
+      </div>
     </section>
-</body>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="py-2">
+      <div class="container footer-container">
+        <div>
+          <img src="img/logo_light.png" alt="NewsGrid" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe
+            aspernatur esse ea iste! Non voluptates ipsa eaque deserunt
+            accusantium aut!
+          </p>
+        </div>
+        <div>
+          <h3>Email Newsletter</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates,
+            cupiditate!
+          </p>
+          <form action="">
+            <input type="email" placeholder="Enter Email..." />
+            <input type="submit" value="Subscribe" class="btn btn-primary" />
+          </form>
+        </div>
+        <div>
+          <h3>Site Links</h3>
+          <ul class="list">
+            <li><a href="#">Help & Support</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div>
+          <h2>Join Our Club</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, eum?
+          </p>
+          <a href="#" class="btn btn-secondary">Join Now</a>
+        </div>
+        <div><p>Copyright &copy; 2023, All Rights Reserve</p></div>
+      </div>
+    </footer>
+  </body>
 </html>
