--- a/article.html
+++ b/article.html
@@ -23,7 +23,7 @@
       href="css/mobile.css"
     />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
-    <title>NewsGrid | About</title>
+    <title>NewsGrid | Latest News</title>
   </head>
   <body>
     <div id="main-nav">
@@ -45,16 +45,23 @@
         </div>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="current">About</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </div>
     </div>
 
-    <section id="about">
+    <section id="article">
       <div class="container">
         <div class="page-container">
           <article class="card">
-            <h1 class="l-heading">About Our Organization</h1>
+            <img src="img/articles/ent1.jpg" alt="" />
+            <h1 class="l-heading">Lorem ipsum dolor sit amet.</h1>
+            <div class="meta">
+              <small>
+                <i class="fas fa-user"></i> Written By John Doe January 12 2023
+              </small>
+              <div class="category category-ent">Entertainment</div>
+            </div>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
               Accusamus magnam atque repudiandae harum ipsam molestias beatae
@@ -86,7 +93,29 @@
               voluptates officiis ipsa minima explicabo!
             </p>
           </article>
-          <aside class="card bg-primary">
+          <aside id="categories" class="card">
+            <h2>Categories</h2>
+            <ul class="list">
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i> Sports</a>
+              </li>
+              <li>
+                <a href="#"
+                  ><i class="fas fa-chevron-right"></i> Entertainment</a
+                >
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i> Technology</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i> Fashion</a>
+              </li>
+              <li>
+                <a href="#"><i class="fas fa-chevron-right"></i> Shopping</a>
+              </li>
+            </ul>
+          </aside>
+          <aside class="card bg-secondary">
             <h2>Join Our Club</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos,
